Fix input overflow on iPhone

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -85,7 +85,7 @@ body {
   }
 
   @media #{$mobile} {
-    height: 440px;
+    height: 500px;
   }
 
   .slogan {
